--- a/src/index.html
+++ b/src/index.html
@@ -5,41 +5,22 @@
     <title>Hello World!</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   </head>
-  <body>
-  <nav class="navbar navbar-inverse">
-     <div class="container">
-       <div class="navbar-header">
-         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-           <span class="sr-only">Toggle navigation</span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-         </button>
-         <a class="navbar-brand" href="#">Project name</a>
-       </div>
-       <div id="navbar" class="collapse navbar-collapse">
-         <ul class="nav navbar-nav">
-           <li class="active"><a href="#">Home</a></li>
-           <li><a href="#about">About</a></li>
-           <li><a href="#contact">Contact</a></li>
-         </ul>
-       </div><!--/.nav-collapse -->
+  <body data-feedly-mini="yes">
+   <div class="container-fluid">
+       <div class="row">
+           <div class="col-sm-2">
+               <ul class="nav nav-sidebar">
+                  <li> <a href="#">Main</a></li>
+               </ul>
+           </div>
+
+         <div class="col-sm-8">
+           <h1 class="page-header">Hello World!</h1>
+           <p class="lead">We are using node <script>document.write(process.versions.node)</script>,
+           Chrome <script>document.write(process.versions.chrome)</script>,
+           and Electron <script>document.write(process.versions.electron)</script>.</p>
+         </div>
      </div>
-   </nav>
-
-   <div class="container">
-
-     <div class="starter-template">
-       <h1>Bootstrap starter template</h1>
-       <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-
-       <h1>Hello World!</h1>
-       <p class="lead">We are using node <script>document.write(process.versions.node)</script>,
-       Chrome <script>document.write(process.versions.chrome)</script>,
-       and Electron <script>document.write(process.versions.electron)</script>.</p>
-     </div>
-
-   </div><!-- /.container -->
-
+   </div>
    </body>
 </html>
