--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script>window.$ = window.bootstrap = require('bootstrap');</script>
   </head>
   <body data-feedly-mini="yes">
+      <!--
    <div class="container-fluid">
        <div class="row">
            <div class="col-sm-2">
@@ -35,7 +36,7 @@
      </div>
    </div>
 
-   <!-- Modal -->
+
    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
      <div class="modal-dialog" role="document">
        <div class="modal-content">
@@ -50,6 +51,6 @@
          </div>
        </div>
      </div>
-   </div>
+   </div>-->
    </body>
 </html>
