--- a/index-view.html
+++ b/index-view.html
@@ -10,6 +10,7 @@
     <script>window.$ = window.bootstrap = require('bootstrap');</script>
   </head>
   <body data-feedly-mini="yes">
+      Hello World
       <!--
    <div class="container-fluid">
        <div class="row">
