updated dependencies and UI

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
         <div id="app">
-            <template v-for="post in postsFake">
+            <template v-for="post in posts">
                 <post :data="post" />
             </template>
         </div>
