added plugin settings

--- a/app.html
+++ b/app.html
@@ -17,8 +17,8 @@
             </template>
         </div>
         <script type="text/javascript">
-            var viewModel = require('./lib/app-view-model');
-            var model = require('./lib/app-model');
+            var viewModel = require('./lib/main/app-view-model');
+            var model = require('./lib/main/app-model');
             var ipc = require('ipc');
             var electron = require('electron');
             var BrowserWindow = electron.remote.BrowserWindow;
