--- a/app.html
+++ b/app.html
@@ -30,24 +30,14 @@
                 </div>
         </div>
         <script type="text/javascript">
-            const viewModel = require('./lib/main/app-view-model');
-            const model = require('./lib/main/app-model');
-            const electron = require('electron');
-            const ipcRenderer = electron.ipcRenderer;
-            const BrowserWindow = electron.remote.BrowserWindow;
-            const ElectronSettings = require('electron-settings');
+            const bootstraper = require('./lib/bootstraper')();
+            const ipcRenderer = require('electron').ipcRenderer;
 
-            var settings = new ElectronSettings();
-            var localwindow = new BrowserWindow({show: false, webPreferences: {nodeIntegration: false}});
-            var modelObj;
-            var viewModelObj;
             ipcRenderer.on('initialize', () => {
-                this.modelObj = new model([], settings, window, localwindow);
-                this.viewModelObj = new viewModel(window, modelObj);
+                bootstraper.initialize(window);
             });
             ipcRenderer.on('finalize', () => {
-                this.viewModelObj.finalize();
-                ipcRenderer.send('now-close');
+                bootstraper.finalize();
             });
         </script>
     </body>
