--- a/app.html
+++ b/app.html
@@ -30,7 +30,8 @@
                 </div>
         </div>
         <script type="text/javascript">
-            require('./lib/bootstraper')(window);
+            const intializer = require('./lib/main/app-initializer');
+            const init  = new intializer(window);
         </script>
     </body>
 </html>
