--- a/lib/settings/settings.html
+++ b/lib/settings/settings.html
@@ -17,26 +17,8 @@
             </template>
         </div>
         <script type="text/javascript">
-            var pluginsViewModel = require('./plugins-view-model');
-            var pluginsModel = require('./plugins-model');
-            const path = require('path');
-            const fs = require('fs');
-
-            var pathto = path.join(__dirname, '/../../package.json');
-            fs.openSync(pathto, 'r+');
-            var data=fs.readFileSync(pathto);
-            var packageJson = JSON.parse(data);
-            var installed = packageJson.plugins;
-            var all = [{ name: "koteky-twitter", version: "^0.4.3" }]
-
-            var update = (pluginSection) =>
-            {
-                packageJson.plugins = pluginSection;
-                fs.writeFileSync(pathto, JSON.stringify(packageJson));
-            }
-
-            var pluginsM = new pluginsModel(all, installed, update);
-            var pluginsVM = new pluginsViewModel(window, pluginsM);
+            const intializer = require('./settings-initializer');
+            const init  = new intializer(window);
         </script>
     </body>
 </html>
