posts are treated as html and open link in default browser

--- a/app.html
+++ b/app.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Koteky</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <base target="_blank">
     <script>
     window.$ = window.jQuery = require('jquery');
     window.$ = window.bootstrap = require('bootstrap');
