--- a/app.html
+++ b/app.html
@@ -14,7 +14,10 @@
   </head>
   <body>
         <div id="app">
-            <div class="container">
+            <div v-if="model.posts.length" class="loading">
+                <img src="resources/dots64.gif" />
+            </div>
+            <div class="container" v-else>
                 <div class="row">
                     <div class="editor" data-spy="affix">
                         <div class="container">
@@ -33,8 +36,8 @@
                                         </label>
                                     </template>
                                 </div>
-
                             </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row post-stream" v-infinite-scroll="getMorePosts()" infinite-scroll-disabled="busy" infinite-scroll-immediate-check=false infinite-scroll-distance="10">
@@ -42,10 +45,21 @@
                         <post :data="post" />
                     </template>
                 </div>
+            </div>
         </div>
         <script type="text/javascript">
             const intializer = require('./lib/main/app-initializer');
             const init  = new intializer(window);
+        </script>
+        <script>
+            require('electron-cookies');
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-64624825-2', 'auto');
+            ga('send', 'pageview');
         </script>
     </body>
 </html>
