--- a/lib/settings/settings.html
+++ b/lib/settings/settings.html
@@ -11,11 +11,29 @@
     </script>
   </head>
   <body>
-        <div id="plugins">
-            <template v-for="plugin in all">
-                <plugin :context="plugin" />
-            </template>
-        </div>
+
+       <div class="container">
+       <div id="content">
+           <ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
+               <li class="active"><a href="#general" data-toggle="tab">General</a></li>
+               <li><a href="#plugins" data-toggle="tab">Plugins</a></li>
+           </ul>
+           <div id="my-tab-content" class="tab-content">
+               <div class="tab-pane active" id="general">
+                   <h1>General Settings</h1>
+                   <p>all you can change in the app</p>
+               </div>
+               <div class="tab-pane" id="plugins">
+                   <h1>Plugins Settings</h1>
+                   <div id="plugins">
+                       <template v-for="plugin in all">
+                           <plugin :context="plugin" />
+                       </template>
+                   </div>
+               </div>
+           </div>
+       </div>
+       </div>
         <script type="text/javascript">
             const intializer = require('./settings-initializer');
             const init  = new intializer(window);
